--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.10.10"
+    "mongoose": "^5.10.10",
+    "node": "^15.0.1"
   }
 }
