--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.10.10",
     "node": "^15.0.1",
+    "req-flash": "0.0.3",
     "session": "^0.1.0"
   }
 }
